// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles quick solutions handles the endsEarly scenario (by not ending early 1`] = `undefined`;

exports[`Handles quick solutions handles the endsEarly scenario (by not ending early 2`] = `
Object {
  "2,11": Object {
    "blocksHandledByLine": Array [
      "7,11",
      "8,11",
      "9,11",
    ],
    "blocksHandledByOthers": Array [
      "6,11",
      "5,11",
      "4,11",
      "3,11",
    ],
    "direction": "horizontal",
    "key": "2,11",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 3,
  },
  "5,10": Object {
    "blocksHandledByLine": Array [
      "5,11",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "5,10",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "6,10": Object {
    "blocksHandledByLine": Array [
      "6,11",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "6,10",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
  "7,10": Object {
    "blocksHandledByLine": Array [
      "3,10",
    ],
    "blocksHandledByOthers": Array [
      "6,10",
      "5,10",
      "4,10",
    ],
    "direction": "vertical",
    "key": "7,10",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 0,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the maybeBroke 1`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 2`] = `
Object {
  "0,5": Object {
    "blocksHandledByLine": Array [
      "0,1",
      "0,2",
      "0,0",
    ],
    "blocksHandledByOthers": Array [
      "0,4",
      "0,3",
    ],
    "direction": "vertical",
    "key": "0,5",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 1,
    "value": 3,
  },
  "1,4": Object {
    "blocksHandledByLine": Array [
      "0,4",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 10,
    "value": 1,
  },
  "4,9": Object {
    "blocksHandledByLine": Array [
      "4,4",
      "4,6",
      "4,3",
    ],
    "blocksHandledByOthers": Array [
      "4,8",
      "4,7",
      "4,5",
    ],
    "direction": "vertical",
    "key": "4,9",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 3,
    "value": 3,
  },
  "5,3": Object {
    "blocksHandledByLine": Array [
      "1,3",
      "2,3",
      "3,3",
      "0,3",
    ],
    "blocksHandledByOthers": Array [
      "4,3",
    ],
    "direction": "horizontal",
    "key": "5,3",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 2,
    "value": 4,
  },
  "5,7": Object {
    "blocksHandledByLine": Array [
      "4,7",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "5,7",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 8,
    "value": 1,
  },
  "5,8": Object {
    "blocksHandledByLine": Array [
      "4,8",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "5,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 9,
    "value": 1,
  },
  "6,7": Object {
    "blocksHandledByLine": Array [
      "6,5",
    ],
    "blocksHandledByOthers": Array [
      "6,6",
    ],
    "direction": "vertical",
    "key": "6,7",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "7,4": Object {
    "blocksHandledByLine": Array [
      "7,5",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "7,4",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 7,
    "value": 1,
  },
  "7,6": Object {
    "blocksHandledByLine": Array [
      "6,6",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "7,6",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "8,5": Object {
    "blocksHandledByLine": Array [
      "5,5",
      "4,5",
    ],
    "blocksHandledByOthers": Array [
      "7,5",
      "6,5",
    ],
    "direction": "horizontal",
    "key": "8,5",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 2,
  },
}
`;

exports[`Handles quick solutions handles the maybeBroke 3`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 4`] = `
Object {
  "5,0": Object {
    "blocksHandledByLine": Array [
      "5,1",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "5,0",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the maybeBroke 5`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 6`] = `
Object {
  "8,0": Object {
    "blocksHandledByLine": Array [
      "8,1",
      "8,2",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 0,
    "value": 2,
  },
}
`;

exports[`Handles quick solutions handles the randomFive 1`] = `undefined`;

exports[`Handles quick solutions handles the randomFive 2`] = `
Object {
  "0,5": Object {
    "blocksHandledByLine": Array [
      "0,1",
      "0,0",
    ],
    "blocksHandledByOthers": Array [
      "0,4",
      "0,3",
      "0,2",
    ],
    "direction": "vertical",
    "key": "0,5",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 3,
    "value": 2,
  },
  "1,2": Object {
    "blocksHandledByLine": Array [
      "0,2",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "1,2",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 0,
    "value": 1,
  },
  "1,4": Object {
    "blocksHandledByLine": Array [
      "0,4",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "1,4",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
  "3,3": Object {
    "blocksHandledByLine": Array [
      "1,3",
      "2,3",
      "0,3",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "3,3",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 2,
    "value": 3,
  },
}
`;

exports[`Handles quick solutions handles the solutionRightBeside 1`] = `undefined`;

exports[`Handles quick solutions handles the solutionRightBeside 2`] = `
Object {
  "10,9": Object {
    "blocksHandledByLine": Array [
      "10,8",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "10,9",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "11,8": Object {
    "blocksHandledByLine": Array [
      "7,8",
    ],
    "blocksHandledByOthers": Array [
      "10,8",
      "9,8",
      "8,8",
    ],
    "direction": "horizontal",
    "key": "11,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "8,10": Object {
    "blocksHandledByLine": Array [
      "8,8",
    ],
    "blocksHandledByOthers": Array [
      "8,9",
    ],
    "direction": "vertical",
    "key": "8,10",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
  "9,8": Object {
    "blocksHandledByLine": Array [
      "9,9",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "9,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 0,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the wayTooSimple scenario 1`] = `undefined`;

exports[`Handles quick solutions handles the wayTooSimple scenario 2`] = `
Object {
  "10,10": Object {
    "blocksHandledByLine": Array [
      "10,8",
    ],
    "blocksHandledByOthers": Array [
      "10,9",
    ],
    "direction": "vertical",
    "key": "10,10",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "11,8": Object {
    "blocksHandledByLine": Array [
      "9,8",
    ],
    "blocksHandledByOthers": Array [
      "10,8",
    ],
    "direction": "horizontal",
    "key": "11,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "11,9": Object {
    "blocksHandledByLine": Array [
      "10,9",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "11,9",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 7,
    "value": 1,
  },
  "5,10": Object {
    "blocksHandledByLine": Array [
      "6,10",
      "8,10",
      "9,10",
    ],
    "blocksHandledByOthers": Array [
      "7,10",
    ],
    "direction": "horizontal",
    "key": "5,10",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 8,
    "value": 3,
  },
  "7,11": Object {
    "blocksHandledByLine": Array [
      "7,10",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "7,11",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 9,
    "value": 1,
  },
  "7,4": Object {
    "blocksHandledByLine": Array [
      "9,4",
    ],
    "blocksHandledByOthers": Array [
      "8,4",
    ],
    "direction": "horizontal",
    "key": "7,4",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "8,6": Object {
    "blocksHandledByLine": Array [
      "8,4",
    ],
    "blocksHandledByOthers": Array [
      "8,5",
    ],
    "direction": "vertical",
    "key": "8,6",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "9,3": Object {
    "blocksHandledByLine": Array [
      "9,6",
      "9,7",
      "9,9",
      "9,11",
    ],
    "blocksHandledByOthers": Array [
      "9,10",
      "9,8",
      "9,5",
      "9,4",
    ],
    "direction": "vertical",
    "key": "9,3",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 4,
  },
  "9,5": Object {
    "blocksHandledByLine": Array [
      "8,5",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "9,5",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the worksWell scenario 1`] = `undefined`;

exports[`Handles quick solutions handles the worksWell scenario 2`] = `
Object {
  "1,6": Object {
    "blocksHandledByLine": Array [
      "2,6",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "vertical",
    "key": "1,6",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 0,
    "value": 1,
  },
  "2,5": Object {
    "blocksHandledByLine": Array [
      "2,7",
    ],
    "blocksHandledByOthers": Array [
      "2,6",
    ],
    "direction": "vertical",
    "key": "2,5",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
  "3,5": Object {
    "blocksHandledByLine": Array [
      "3,7",
    ],
    "blocksHandledByOthers": Array [
      "3,6",
    ],
    "direction": "vertical",
    "key": "3,5",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "4,7": Object {
    "blocksHandledByLine": Array [
      "4,6",
    ],
    "blocksHandledByOthers": Array [],
    "direction": "horizontal",
    "key": "4,7",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "5,7": Object {
    "blocksHandledByLine": Array [
      "1,7",
      "0,7",
    ],
    "blocksHandledByOthers": Array [
      "4,7",
      "3,7",
      "2,7",
    ],
    "direction": "horizontal",
    "key": "5,7",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 2,
  },
}
`;
